--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,10 @@ version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.9"
 django = ">=1.8.19,<2.3"
 boto3 = ">=1.9.26"
 botocore = ">=1.12.26"
@@ -92,6 +93,11 @@ django-admin-sortable = "2.1.8"
 django-admin-ip-restrictor = "2.2.0"
 django-ratelimit = "3.0.1"
 uwsgi = ">=2.0.19.1"
+backports-csv = "^1.0.7"
+
+[tool.poetry.dependencies.django-suit]
+git = "https://github.com/darklow/django-suit.git"
+branch = "v2"
 
 
 
