--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ package-mode = false
 [tool.poetry.dependencies]
 python = "^3.9"
 django = ">=1.8.19,<2.3"
-boto3 = ">=1.9.26"
+boto3 = "1.9.26"
 botocore = ">=1.12.26"
 cairocffi = ">=0.9.0"
 cairosvg = ">=1.0.22"
