--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.9"
-django = ">=1.8.19,<2.3"
-boto3 = "1.9.26"
+django = "3.2"
+boto3 = "^1.34.106"
 botocore = ">=1.12.26"
 cairocffi = ">=0.9.0"
 cairosvg = ">=1.0.22"
@@ -25,10 +25,10 @@ django-compressor = ">=2.2"
 django-constance = ">=2.3.1"
 django-defender = ">=0.7.0"
 django-extensions = ">=2.1.3"
-django-filer = ">=1.2.4,<=2.2.6"
+django-filer = "3.1.1"
 django-import-export = ">=1.1.0"
 django-mptt = ">=0.8.7"
-django-polymorphic = ">=0.8.1,<2.1"
+django-polymorphic = "3.1"
 django-request = ">=1.5.4"
 django-reversion = ">=3.0.0"
 django-settings-export = ">=1.2.1"
@@ -95,8 +95,8 @@ django-ratelimit = "3.0.1"
 uwsgi = ">=2.0.19.1"
 backports-csv = "^1.0.7"
 
-[tool.poetry.dependencies.django-suit]
-git = "https://github.com/darklow/django-suit.git"
+[tool.poetry.dependencies.django-suit-v2-pm]
+git = "https://github.com/pulse-mind/django-suit.git"
 branch = "v2"
 
 
