--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.9"
-django = "3.2"
+django = "4.2"
 boto3 = "^1.34.106"
 botocore = ">=1.12.26"
 cairocffi = ">=0.9.0"
@@ -89,11 +89,11 @@ xlrd = ">=1.1.0"
 xlwt = ">=1.3.0"
 django-npm = ">=1.0.0"
 future = ">=0.18.2"
-django-admin-sortable = "2.1.8"
-django-admin-ip-restrictor = "2.2.0"
-django-ratelimit = "3.0.1"
+django-admin-sortable = "^2.3"
+django-ratelimit = "^4.1.0"
 uwsgi = ">=2.0.19.1"
 backports-csv = "^1.0.7"
+django-ipware = "^7.0.1"
 
 [tool.poetry.dependencies.django-suit-v2-pm]
 git = "https://github.com/pulse-mind/django-suit.git"
