--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,11 @@ services:
       - ./.docker-data/redis:/data
     ports:
       - '6379:6379'
+    healthcheck:
+      test: [ "CMD-SHELL", "redis-cli ping | grep PONG" ]
+      interval: 1s
+      timeout: 3s
+      retries: 5
 
   app:
     build:
@@ -48,23 +53,24 @@ services:
       - DJANGO_ALLOWED_HOSTS=app,localhost,127.0.0.1
       - DJANGO_MEDIA_ROOT=/media/
       - DJANGO_SETTINGS_MODULE=serafin.settings
-      - DJANGO_CSRF_TRUSTED_ORIGINS=http://localhost:8000
+      - DJANGO_CSRF_TRUSTED_ORIGINS=http://localhost:8000,http://app:8000,http://127.0.0.1:8000
+      - DEBUG=0
 
     command:
       - bash
       - -c
       - |
         python manage.py migrate
-        python manage.py createsuperuser --username admin --email admin@admin.com --noinput && cat <<-000 | python manage.py shell
+        python manage.py createsuperuser --email admin@admin.com --noinput && cat <<-000 | python manage.py shell
         from django.contrib.auth import get_user_model
-        admin = get_user_model().objects.get(username='admin')
+        admin = get_user_model().objects.get(email='admin@admin.com')
         admin.set_password('admin')
         admin.save()
         print('Superuser password updated successfully.')
         000
         python manage.py collectstatic --noinput
         cp /srv/app/static/* -r /static/
-        gunicorn --workers 3 serafin.wsgi --timeout 180 --bind 0.0.0.0 --reload
+        gunicorn --workers 3 serafin.wsgi --timeout 180 --bind 0.0.0.0:8000 --reload
 
     volumes:
       - ./data/static:/static
@@ -86,7 +92,8 @@ services:
       - DJANGO_ALLOWED_HOSTS=app,localhost,127.0.0.1
       - DJANGO_MEDIA_ROOT=/media/
       - DJANGO_SETTINGS_MODULE=serafin.settings
-      - DJANGO_CSRF_TRUSTED_ORIGINS=http://localhost:8000
+      - DJANGO_CSRF_TRUSTED_ORIGINS=http://localhost:8000,http://app:8000,http://127.0.0.1:8000
+      - DEBUG=0
 
     volumes:
       - ./data/static:/static
