--- a/nginx_compose/nginx.conf
+++ b/nginx_compose/nginx.conf
@@ -1,4 +1,4 @@
-upstream web {
+upstream app {
   ip_hash;
   server app:8000;
 }
@@ -20,7 +20,6 @@ server {
         proxy_set_header Host $host:$server_port;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
     listen 8080;
     server_name localhost;
