--- a/requirements.txt
+++ b/requirements.txt
@@ -1,88 +1,120 @@
-boto3>=1.9.26
-botocore>=1.12.26
-cairocffi>=0.9.0
-CairoSVG>=1.0.22
-certifi>=2018.10.15
-cffi>=1.11.5
-chardet>=3.0.4
-contextlib2>=0.5.5
-cssselect2>=0.2.1
-decorator>=4.3.0
-diff-match-patch>=20121119
-Django>=1.8.19,<2.3
-django-appconf>=1.0.2
-django-compressor>=2.2
-django-constance>=2.3.1
-django-defender>=0.7.0
-django-extensions>=2.1.3
-django-filer>=1.2.4,<=2.2.6
-django-import-export>=1.1.0
-django-mptt>=0.8.7
-django-polymorphic>=0.8.1,<2.1
-django-request>=1.5.4
-django-reversion>=3.0.0
-django-settings-export>=1.2.1
-django-sitetree>=1.12.0
-django-storages>=1.6.5
-django-user-agents>=0.3.2
-django-xforwardedfor-middleware>=1.1
-djangorestframework>=3.6.4
-docutils>=0.14
-easy-thumbnails>=2.3
-et-xmlfile>=1.0.1
-gevent>=1.3.7
-greenlet>=0.4.15
-gunicorn>=19.9.0
-html5lib>=1.0.1
-httplib2>=0.11.3
-huey>=1.2.1
-idna>=2.7
-jdcal>=1.4
-jmespath>=0.9.3
-jsonfield~=3.1.0
-lxml>=4.2.5
-mistune>=0.8.4
-odfpy>=1.3.6
-openpyxl>=2.5.8
-pdfrw>=0.4
-Pillow>=5.3.0
-plivo>=4.1.3
-psycopg2-binary==2.8.6
-pycparser>=2.19
-pyparsing>=2.2.2
-Pyphen>=0.9.5
-python-dateutil>=2.7.3,<2.8.1
-pytz>=2018.5
-PyYAML>=3.13
-raven>=6.9.0
-rcssmin>=1.0.6
-redis>=2.10.6,<=3.5
-requests>=2.19.1
-requests-file>=1.4.3
-rjsmin>=1.0.12
-rules>=2.0
-s3transfer>=0.1.13
-six>=1.11.0
-tablib>=0.12.1
-tinycss2>=0.6.1
-tldextract>=2.2.0
-twilio>=5.7.0
-typing>=3.6.6
-ua-parser>=0.8.0
-unicodecsv>=0.14.1
-Unidecode>=0.4.21,<1.1
-urllib3>=1.23
-user-agents>=1.1.0
-virtualenv>=16.0.0
-WeasyPrint>=0.42.3
-webencodings>=0.5.1
-whitenoise>=4.1
-xlrd>=1.1.0
-xlwt>=1.3.0
-django-npm>=1.0.0
-backports.csv
-future>=0.18.2
-django-admin-sortable==2.1.8
-uWSGI>=2.0.19.1,<2.0.20
-django-admin-ip-restrictor==2.2.0
-django-ratelimit==3.0.1
+aiohttp-retry==2.8.3 ; python_version >= "3.9" and python_version < "4.0"
+aiohttp==3.9.5 ; python_version >= "3.9" and python_version < "4.0"
+aiosignal==1.3.1 ; python_version >= "3.9" and python_version < "4.0"
+asgiref==3.8.1 ; python_version >= "3.9" and python_version < "4.0"
+async-timeout==4.0.3 ; python_version >= "3.9" and python_version < "3.11"
+attrs==23.2.0 ; python_version >= "3.9" and python_version < "4.0"
+backports-csv==1.0.7 ; python_version >= "3.9" and python_version < "4.0"
+boto3==1.34.106 ; python_version >= "3.9" and python_version < "4.0"
+botocore==1.34.106 ; python_version >= "3.9" and python_version < "4.0"
+brotli==1.1.0 ; platform_python_implementation == "CPython" and python_version >= "3.9" and python_version < "4.0"
+brotlicffi==1.1.0.0 ; platform_python_implementation != "CPython" and python_version >= "3.9" and python_version < "4.0"
+cairocffi==1.7.0 ; python_version >= "3.9" and python_version < "4.0"
+cairosvg==2.7.1 ; python_version >= "3.9" and python_version < "4.0"
+certifi==2024.2.2 ; python_version >= "3.9" and python_version < "4.0"
+cffi==1.16.0 ; python_version >= "3.9" and python_version < "4.0"
+chardet==5.2.0 ; python_version >= "3.9" and python_version < "4.0"
+charset-normalizer==3.3.2 ; python_version >= "3.9" and python_version < "4.0"
+contextlib2==21.6.0 ; python_version >= "3.9" and python_version < "4.0"
+cssselect2==0.7.0 ; python_version >= "3.9" and python_version < "4.0"
+decorator==5.1.1 ; python_version >= "3.9" and python_version < "4.0"
+defusedxml==0.7.1 ; python_version >= "3.9" and python_version < "4.0"
+diff-match-patch==20230430 ; python_version >= "3.9" and python_version < "4.0"
+distlib==0.3.8 ; python_version >= "3.9" and python_version < "4.0"
+django-admin-sortable==2.3 ; python_version >= "3.9" and python_version < "4.0"
+django-appconf==1.0.6 ; python_version >= "3.9" and python_version < "4.0"
+django-compressor==4.4 ; python_version >= "3.9" and python_version < "4.0"
+django-constance==3.1.0 ; python_version >= "3.9" and python_version < "4.0"
+django-defender==0.9.8 ; python_version >= "3.9" and python_version < "4.0"
+django-extensions==3.2.3 ; python_version >= "3.9" and python_version < "4.0"
+django-filer==3.1.1 ; python_version >= "3.9" and python_version < "4.0"
+django-import-export==4.0.2 ; python_version >= "3.9" and python_version < "4.0"
+django-ipware==7.0.1 ; python_version >= "3.9" and python_version < "4.0"
+django-js-asset==2.2.0 ; python_version >= "3.9" and python_version < "4.0"
+django-mptt==0.16.0 ; python_version >= "3.9" and python_version < "4.0"
+django-npm==1.0.0 ; python_version >= "3.9" and python_version < "4.0"
+django-picklefield==3.2 ; python_version >= "3.9" and python_version < "4.0"
+django-polymorphic==3.1.0 ; python_version >= "3.9" and python_version < "4.0"
+django-ratelimit==4.1.0 ; python_version >= "3.9" and python_version < "4.0"
+django-request==1.6.3 ; python_version >= "3.9" and python_version < "4.0"
+django-reversion==5.0.12 ; python_version >= "3.9" and python_version < "4.0"
+django-settings-export==1.2.1 ; python_version >= "3.9" and python_version < "4.0"
+django-sitetree==1.18.0 ; python_version >= "3.9" and python_version < "4.0"
+django-storages==1.14.3 ; python_version >= "3.9" and python_version < "4.0"
+django-suit-v2-pm @ git+https://github.com/pulse-mind/django-suit.git@f00d692113ccb0b3d96bfe000de09e5515b07edf ; python_version >= "3.9" and python_version < "4.0"
+django-user-agents==0.4.0 ; python_version >= "3.9" and python_version < "4.0"
+django-xforwardedfor-middleware==2.0 ; python_version >= "3.9" and python_version < "4.0"
+django==4.2 ; python_version >= "3.9" and python_version < "4.0"
+djangorestframework==3.15.1 ; python_version >= "3.9" and python_version < "4.0"
+docutils==0.15.2 ; python_version >= "3.9" and python_version < "4.0"
+easy-thumbnails==2.8.5 ; python_version >= "3.9" and python_version < "4.0"
+easy-thumbnails[svg]==2.8.5 ; python_version >= "3.9" and python_version < "4.0"
+et-xmlfile==1.1.0 ; python_version >= "3.9" and python_version < "4.0"
+filelock==3.14.0 ; python_version >= "3.9" and python_version < "4.0"
+fonttools[woff]==4.51.0 ; python_version >= "3.9" and python_version < "4.0"
+frozenlist==1.4.1 ; python_version >= "3.9" and python_version < "4.0"
+future==1.0.0 ; python_version >= "3.9" and python_version < "4.0"
+gevent==24.2.1 ; python_version >= "3.9" and python_version < "4.0"
+greenlet==3.0.3 ; python_version >= "3.9" and python_version < "4.0"
+gunicorn==22.0.0 ; python_version >= "3.9" and python_version < "4.0"
+html5lib==1.1 ; python_version >= "3.9" and python_version < "4.0"
+httplib2==0.22.0 ; python_version >= "3.9" and python_version < "4.0"
+huey==2.5.0 ; python_version >= "3.9" and python_version < "4.0"
+idna==3.7 ; python_version >= "3.9" and python_version < "4.0"
+jdcal==1.4.1 ; python_version >= "3.9" and python_version < "4.0"
+jmespath==0.10.0 ; python_version >= "3.9" and python_version < "4.0"
+jsonfield==3.1.0 ; python_version >= "3.9" and python_version < "4.0"
+lxml==4.9.4 ; python_version >= "3.9" and python_version < "4.0"
+mistune==3.0.2 ; python_version >= "3.9" and python_version < "4.0"
+multidict==6.0.5 ; python_version >= "3.9" and python_version < "4.0"
+odfpy==1.4.1 ; python_version >= "3.9" and python_version < "4.0"
+openpyxl==3.1.2 ; python_version >= "3.9" and python_version < "4.0"
+packaging==24.0 ; python_version >= "3.9" and python_version < "4.0"
+pdfrw==0.4 ; python_version >= "3.9" and python_version < "4.0"
+pillow==10.3.0 ; python_version >= "3.9" and python_version < "4.0"
+platformdirs==4.2.2 ; python_version >= "3.9" and python_version < "4.0"
+plivo==4.53.0 ; python_version >= "3.9" and python_version < "4.0"
+psycopg2-binary==2.9.6 ; python_version >= "3.10" and python_version < "4.0"
+pycparser==2.22 ; python_version >= "3.9" and python_version < "4.0"
+pydyf==0.10.0 ; python_version >= "3.9" and python_version < "4.0"
+pyjwt==2.8.0 ; python_version >= "3.9" and python_version < "4.0"
+pyparsing==3.1.2 ; python_version >= "3.9" and python_version < "4.0"
+pyphen==0.15.0 ; python_version >= "3.9" and python_version < "4.0"
+python-dateutil==2.8.0 ; python_version >= "3.9" and python_version < "4.0"
+python-ipware==3.0.0 ; python_version >= "3.9" and python_version < "4.0"
+pyyaml==6.0.1 ; python_version >= "3.9" and python_version < "4.0"
+raven==6.10.0 ; python_version >= "3.9" and python_version < "4.0"
+rcssmin==1.1.1 ; python_version >= "3.9" and python_version < "4.0"
+redis==3.5.0 ; python_version >= "3.9" and python_version < "4.0"
+reportlab==4.2.0 ; python_version >= "3.9" and python_version < "4"
+requests-file==2.0.0 ; python_version >= "3.9" and python_version < "4.0"
+requests==2.31.0 ; python_version >= "3.9" and python_version < "4.0"
+rjsmin==1.2.1 ; python_version >= "3.9" and python_version < "4.0"
+rules==3.3 ; python_version >= "3.9" and python_version < "4.0"
+s3transfer==0.10.1 ; python_version >= "3.9" and python_version < "4.0"
+setuptools==69.5.1 ; python_version >= "3.9" and python_version < "4.0"
+six==1.16.0 ; python_version >= "3.9" and python_version < "4.0"
+sqlparse==0.5.0 ; python_version >= "3.9" and python_version < "4.0"
+svglib==1.5.1 ; python_version >= "3.9" and python_version < "4.0"
+tablib==3.5.0 ; python_version >= "3.9" and python_version < "4.0"
+tinycss2==1.3.0 ; python_version >= "3.9" and python_version < "4.0"
+tldextract==5.1.2 ; python_version >= "3.9" and python_version < "4.0"
+twilio==9.0.5 ; python_version >= "3.9" and python_version < "4.0"
+typing-extensions==4.11.0 ; python_version >= "3.9" and python_version < "3.11"
+typing==3.7.4.3 ; python_version >= "3.9" and python_version < "4.0"
+tzdata==2024.1 ; python_version >= "3.9" and python_version < "4.0" and sys_platform == "win32"
+ua-parser==0.18.0 ; python_version >= "3.9" and python_version < "4.0"
+unicodecsv==0.14.1 ; python_version >= "3.9" and python_version < "4.0"
+unidecode==1.0.23 ; python_version >= "3.9" and python_version < "4.0"
+urllib3==1.25.11 ; python_version >= "3.9" and python_version < "4"
+user-agents==2.2.0 ; python_version >= "3.9" and python_version < "4.0"
+uwsgi==2.0.25.1 ; python_version >= "3.9" and python_version < "4.0"
+virtualenv==20.26.2 ; python_version >= "3.9" and python_version < "4.0"
+weasyprint==62.1 ; python_version >= "3.9" and python_version < "4.0"
+webencodings==0.5.1 ; python_version >= "3.9" and python_version < "4.0"
+xlrd==2.0.1 ; python_version >= "3.9" and python_version < "4.0"
+xlwt==1.3.0 ; python_version >= "3.9" and python_version < "4.0"
+yarl==1.9.4 ; python_version >= "3.9" and python_version < "4.0"
+zope-event==5.0 ; python_version >= "3.9" and python_version < "4.0"
+zope-interface==6.3 ; python_version >= "3.9" and python_version < "4.0"
+zopfli==0.2.3 ; python_version >= "3.9" and python_version < "4.0"
