--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,4 +48,4 @@ jobs:
       - name: Install dependencies
         run: poetry install --no-interaction
       - name: Run tests
-        run: poetry run python manage.py test -v 3 --settings=serafin.settings_tests
+        run: poetry run python manage.py test -v 3 --settings=serafin.settings --configuration=Testing
