--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,4 +50,4 @@ jobs:
       - name: Run tests
         run: DATABASE_URL=$DATABASE_URL poetry run python manage.py test -v 3 --settings=serafin.settings --configuration=Testing
         env:
-          DATABASE_URL=postgresql://postgres:postgres@db/postgres
+          DATABASE_URL: "postgresql://postgres:postgres@db/postgres"
