--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,7 +80,7 @@ typing = ">=3.6.6"
 ua-parser = ">=0.8.0"
 unicodecsv = ">=0.14.1"
 unidecode = ">=0.4.21,<1.1"
-urllib3 = ">=1.23"
+urllib3 = ">=1.23, <2"
 user-agents = ">=1.1.0"
 virtualenv = ">=16.0.0"
 weasyprint = ">=0.42.3"
