--- a/nginx_compose/nginx_prod.conf
+++ b/nginx_compose/nginx_prod.conf
@@ -39,6 +39,7 @@ server {
     gzip_proxied any;
     gzip_types text/plain application/json;
     gzip_min_length 1000;
+    client_max_body_size 10M;
 
     location /static/media {
         alias /media/;
