--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,6 +95,8 @@ django-ipware = "^7.0.1"
 django-configurations = {extras = ["database"], version = "^2.5.1"}
 psycopg2 = "^2.9.9"
 sentry-sdk = {extras = ["django"], version = "^2.5.1"}
+html2text = "^2024.2.26"
+django-author = "^1.2.0"
 
 [tool.poetry.dependencies.django-suit-v2-pm]
 git = "https://github.com/pulse-mind/django-suit.git"
