--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,6 +98,7 @@ sentry-sdk = {extras = ["django"], version = "^2.5.1"}
 html2text = "^2024.2.26"
 django-author = "^1.2.0"
 ijson = "^3.3.0"
+psutil = "^6.0.0"
 
 [tool.poetry.dependencies.django-suit-v2-pm]
 git = "https://github.com/pulse-mind/django-suit.git"
