--- a/docker-compose-prod-deploy.yml
+++ b/docker-compose-prod-deploy.yml
@@ -67,6 +67,7 @@ services:
       - -c
       - |
         python manage.py migrate
+        python manage.py createinitialrevisions
         python manage.py createsuperuser --email admin@admin.com --noinput && cat <<-000 | python manage.py shell
         from django.contrib.auth import get_user_model
         admin = get_user_model().objects.get(email='admin@admin.com')
